# honey-walter

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  circle.yml  docker-compose.yml  fabfile.py  private_env  production-compose.yml  server.py
elastalert/: Dockerfile  config.yml
elastalert/rules/: command.yml
honey/: config.py  config.yml  demo.pem  demo.pub  honey_logging.py  parser.py  requirements.txt  server.py
honey/config/: config.yml
kibana.conf/: kibana.yml
nginx.conf/: demo_client.crt  demo_client.csr  demo_client.key  demo_client.p12  demo_server.crt  demo_server.csr  demo_server.key  nginx.conf
puppet/: init.pp
puppet/modules/honey_walter/files/: docker-compose.yml  kibana.yml  logstash.conf  nginx.conf
puppet/modules/honey_walter/manifests/: init.pp
src/: honey.c
